# ncs-nrf5340-xip-app

./: CMakeLists.txt  Kconfig  Qspi.ini  README.md  west.yml
modules/: modules.cmake
modules/mcuboot/: CMakeLists.txt
smp_svr/: CMakeLists.txt  pm_static.yml  prj.conf
smp_svr/child_image/: mcuboot.conf
zephyr/: module.yml
zigbee_weather_station/: CMakeLists.txt  flash.sh  linker_arm_nocopy.ld  pm_static.yml  rec.sh
zigbee_weather_station/child_image/: mcuboot.conf
zigbee_weather_station/configuration/thingy53_nrf5340_cpuapp/: prj.conf  prj_release.conf
zigbee_weather_station/src/: main.c
zigbee_weather_station_mcumgr/: CMakeLists.txt  README.rst  linker_arm_nocopy.ld  pm_static.yml
zigbee_weather_station_mcumgr/configuration/thingy53_nrf5340_cpuapp/: app.overlay  prj.conf
zigbee_weather_station_mcumgr/configuration/thingy53_nrf5340_cpuapp/child_image/multiprotocol_rpmsg/: prj.conf
zigbee_weather_station_mcumgr/src/: main.c
